test-cases/negative/test_011_invalid_import_syntax.lay
# negative test: invalid import syntax
# expected: error should be thrown

import


